<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CarnavappActivity!</string>
    <string name="actualizar">Actualizar</string>
    <string name="anunciate">- ¡ANUNCIATE AQUÍ! -</string>
    <string name="anunciate_text">Con la llegada de las nuevas tecnologías, el carnaval ha experimentado un aumento del interés por parte de los aficionados. La aparición de la app <b>COAC2012</b> (creada por el mismo autor de Carnavapp) fue todo un hito en el mundo tecnológico, ya que fue la primera aplicación móvil enfocada en el Carnaval de Cádiz y todo lo que rodea. Ahora, <b>Carnavapp</b> viene a completar y mejorar su antecesora, con un nuevo diseño más atractivo, más secciones, y sobre todo, más carnaval durante todo el año.
\n\n
Miles son los usuarios que ya tienen en sus dispositivos <b>Carnavapp</b>, accediendo a la aplicación varias veces al día, lo que la convierte en un escaparate perfecto para tu negocio. 
\n\n
Si está interesado en publicitarse en <b>Carnavapp</b> o tiene alguna duda no dude en contactar con el equipo de desarrollo sin ningún tipo de compromiso</string>
    <string name="anunciate_email_subject">Solicitud Información publicitaria en Carnavapp</string>
    <string name="anunciate_email_text">Hola, quisiera informarme sobre la publiidad disponible en la app Carnavapp para dispositivos Android</string>
    <string name="app_name">Carnavapp</string>
    <string name="autor">Autor</string>
    <string name="blogs">Blogs</string>
    <string name="buscar">Buscar</string>
    <string name="calendario">Calendario</string>
    <string name="cantera">La Cantera</string>
    <string name="callejeras">Callejeras</string>
    <string name="cargando_datos">Cargando datos</string>
    <string name="calle">La Calle</string>
    <string name="clasificacion">Clasificación</string>
    <string name="chirigotas">Chirigotas</string>
    <string name="comentarios">Comentarios</string>
    <string name="comparsas">Comparsas</string>
    <string name="componentes">Componentes</string>
    <string name="concurso">Concurso</string>
    <string name="configuracion">Configuración</string>
    <string name="contactar">Contactar</string>
    <string name="coros">Coros</string>
    <string name="cuartos">Cuartos</string>
    <string name="cuartetos">Cuartetos</string>
    <string name="destacado_vertical">D\nE\nS\nT\nA\nC\nA\nD\nO\n</string>
    <string name="diarios">Diarios</string>
    <string name="director">Director</string>
    <string name="donar">Donar</string>
    <string name="enlaces">Enlaces</string>
    <string name="esperar_carga">Por favor, espere mientras actualizamos los datos desde el servidor</string>
    <string name="fasefinal">Final</string>
    <string name="fotos">Fotos</string>
    <string name="hoy">Hoy</string> 
    <string name="infantiles">Infantiles</string> 
    <string name="info">Información</string> 
    <string name="juveniles">Juveniles</string> 
    <string name="localidad">Localidad</string> 
    <string name="mas_carnaval">Más Carnaval</string>
    <string name="modalidad">Modalidad</string>
    <string name="modalidades">Modalidades</string>
    <string name="no">No</string>
    <string name="no_agrupaciones">No se han encontrado Agrupaciones</string>
    <string name="no_elementos">No se han encontrado Elementos</string>
    <string name="no_evento_dia">Lo sentimos, pero ese día no hay eventos</string>
    <string name="no_conexion">Carnavapp necesita una conexión a Internet para funcionar. Por favor, vuelva a intentarlo más tarde</string>
    <string name="opciones">Opciones</string>
    <string name="otros">Otros</string>
    <string name="otros_anios">Otros años</string>
    <string name="pedir_info">Pedir información</string>
    <string name="preeliminares">Preeliminaresaasda</string>
    <string name="puntos_de_interes">Puntos de Interés</string>
    <string name="romanceros">Romanceros</string>
    <string name="salir">Salir</string>
    <string name="salir_pregunta">¿Estás seguro que deseas salir?</string>
    <string name="semifinales">Semifinales</string>
    <string name="seleccionar_anio">Selecciona la edición del COAC</string>
    <string name="si">Sí</string>
    <string name="sin_datos_otras_ediciones">Sin datos de otras ediciones</string>
    <string name="texto_acerca_de">
    	CARNAVAPP pretende ser el punto de información sobre el Carnaval de Cádiz para la plataforma móvil 
    	Android. Dispone de información referente al Concurso: Agrupaciones, Actuaciones, 
    	Clasificación, Calendario, Vídeos y Comentarios, etc. Junto con Noticias, Enlaces a webs, etc. 
    	Además ofrece la posibilidad de guardar agrupaciones favoritas, ver las retransmisiones 
    	que se emitan on-line, etc. 
    	\n\n
    	<b>ATENCIÓN: CARNAVAPP aun se encuentra en fase beta, por lo que es probable que contenga 
        algunos errores. Si encuentra alguno de ellos, ve algún dato incorrecto o quiere  
    	proponer alguna mejora no dude en contactar con el equipo de desarrollo y en el menor tiempo 
    	posible intentaremos contestar y solucionar el problema</b>
    </string>
    <string name="videos">Vídeos</string>
    <string name="volver">Volver</string>
    <string name="ya_actualizando">Actualizando datos...Por favor vuelva a intentarlo pasados unos segundos</string>

</resources>